--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: '#141416';
+  background-color: 'blue';
 }
 
 .App-logo {
@@ -15,14 +15,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: 'white';
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: blue;
 }
 
 .App-link {
